--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,10 @@ a#package-tabs-tab-archived.active {
   border-bottom-color:#533f03;
 }
 
+#updateButton {
+  margin-bottom:1em;
+}
+
 @media only screen and (min-width: 300px) {
   .App {
     width: 80%;
